examples/test/testpolicy16454.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16454
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key13: value22
      key38: value14
      key35: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value33
          key45: value12
          key43: value10
